--- a/pom.xml
+++ b/pom.xml
@@ -10,18 +10,10 @@
 <dependencies>
 
 <dependency>
-    <groupId>org.springframework</groupId>
-    <artifactId>spring-web</artifactId>
-    <version>5.2.9.RELEASE</version>
+    <groupId>com.googlecode.json-simple</groupId>
+    <artifactId>json-simple</artifactId>
+    <version>1.1.1</version>
 </dependency>
-
-<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-<dependency>
-    <groupId>com.google.guava</groupId>
-    <artifactId>guava</artifactId>
-    <version>25.1-jre</version>
-</dependency>
-
 
      
     </dependencies>
